2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseQueryFilterModel.cs:
	Update to new QueryField api - will probably need some work when we
	re-enable other filters (genre browser, etc).

	* src/Libraries/Hyena/Hyena.Query/QueryField.cs: Based on patch from
	Félix Velasco, fix case-sensitivity bug with genre and other string
	matching (BGO #555120)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Patch from John
	Millikin fixing bug encoding/scrobbling non-ASCII info (BGO #539963)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Widgets/ImageButton.cs: Patch from Wouter
	Bolsterlee fixing mnemonic support (BGO #557880)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	Fix bug with the published date of a playing podcast episode not getting
	loaded/displayed properly (BGO #565863)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs: 
	Patch from John Millikin fixing issue with an album sometimes being listed
	twice, once as a compilation album and once not (BGO #557313)

	* src/Core/Banshee.Core/Banshee.Streaming/StreamTagger.cs: Add some notes
	in a comment.

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/BasicTrackDetailsPage.cs:
	Patch from Ivan Zlatev, fixing bug where the first track's TrackCount
	value wasn't set properly when using the automagic-button (BGO #561083)

2008-12-26  Eoin Hennessy <eoin@randomrules.org>

	* build/osx/targets/bundle-30-gstreamer.targets: We can't ship anything from 
	gst-plugins-ugly, so remove it from dependencies.

2008-12-26  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Services.addins: Remove /tmp from